name:                fedinfra-currentreboots
version:             0.1.0.0
synopsis:            Information about ongoing reboot/update playbook runs
-- description:
homepage:            https://github.com/fedora-infra/fedinfra-currentreboots
license:             BSD2
license-file:        LICENSE
author:              Ricky Elrod
maintainer:          relrod@redhat.com
copyright:           (c) 2015 Red Hat, Inc.
category:            Fedora
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable fedinfra-currentreboots
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       aeson >= 0.7 && < 0.9
                     , base >= 4 && < 5
                     , containers >= 0.5 && < 0.6
                     , lens >= 4.6 && < 5
                     , lens-aeson >= 1 && < 2
                     , scientific >= 0.3 && < 0.4
                     , text >= 1 && < 2
                     , unordered-containers >= 0.2 && < 0.3
                     , wreq >= 0.3 && < 0.4
  default-language:    Haskell2010